--- a/src/css/card.module.css
+++ b/src/css/card.module.css
@@ -1,16 +1,16 @@
 .card_container{
     width: 100vw;
-    background: #0c74bf;
     color: #fff;
     padding: 20px 0 100px;
     padding: 70px 0;  
-    font-size: 1.3rem;
+    color: black;
     font-weight: lighter;
     font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.42857143;
-  
-  
+  background-color: #fff;
+  grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+  height: 40rem;
 }
 .card_center{
    max-width: 1200px;
@@ -20,4 +20,18 @@
    grid-template-columns: repeat(5,1fr);
    color: inherit;
    outline: none;
+   
+}
+.card_text{
+    font-size: 16px;
+    color: black;
+    font-weight: lighter;
+    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+}
+
+.head{
+ background: #fff;
+ display: block;
+ height: fit-content;
 }
