--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -71,3 +71,57 @@ content: "";
 .icon{
     color: white;
 }
+
+
+/* .backToTopButton {
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    font-size: 14px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+
+
+    &.visible {
+      opacity: 100;
+    
+    }
+ 
+  } 
+
+  .icon{
+  
+    color: black;
+    
+} */
+
+
+
+ .backToTopButton {
+    position: fixed;
+    bottom: 60px;
+    right: 15px;
+    z-index: 99;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 2px;
+    display:none;
+    fill: #7b7b7b73;
+    transition: 300ms;
+    filter: drop-shadow(1px 8px 7px rgb(0 0 0 / 0.3));
+   
+   }
+   
+   .backToTopButton:hover {
+     fill: #e9e8e8;
+    border-radius: 3px;
+     filter: drop-shadow(2px 3px 2px rgb(0 0 0 / 0.4));
+   } 
