--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -73,35 +73,43 @@ content: "";
 }
 
 
-/* .backToTopButton {
+.backToTopButton {
     position: fixed;
-    right: 20px;
-    bottom: 20px;
-    padding: 10px;
+    right: 2rem;
+    bottom: 5rem;
+  
     border: none;
-    border-radius: 50%;
-    font-size: 14px;
+    /* border-radius: 50%; */
+   
     cursor: pointer;
     opacity: 0;
     transition: opacity 0.3s ease;
-
+    background-color: transparent;
+   
 
     &.visible {
       opacity: 100;
     
     }
- 
   } 
 
-  .icon{
-  
-    color: black;
-    
-} */
+  .b2ticon{
+  font-size: 4rem;
+  font-weight: 400;
+    color: #7b7b7b73;
+    filter: drop-shadow(1px 8px 7px rgb(0 0 0 / 0.3));
+
+  }
+
+  .b2ticon:hover{
+    color: #e9e8e8;
+    filter: drop-shadow(2px 3px 2px rgb(0 0 0 / 0.4));
+
+  }
 
 
 
- .backToTopButton {
+ /* .backToTopButton {
     position: fixed;
     bottom: 60px;
     right: 15px;
@@ -124,4 +132,4 @@ content: "";
      fill: #e9e8e8;
     border-radius: 3px;
      filter: drop-shadow(2px 3px 2px rgb(0 0 0 / 0.4));
-   } 
+   }  */
