--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@
   box-sizing: border-box;
 }
 body{
-  background-color: gray;
+  background-color: white;
+  overflow-x: hidden;
 }
 img{
   width: 100%;
