--- a/src/css/Footer.module.scss
+++ b/src/css/Footer.module.scss
@@ -37,7 +37,7 @@ align-items: center; */
 }
 
 
-.footer_main {
+.footer-main {
    
     font-weight: 400;
     outline: none;
@@ -95,9 +95,6 @@ align-items: center; */
     
 }
 
-
-
-
  .call2action:focus,
  .call2action:active:focus,
  .call2action.active:focus,
@@ -141,3 +138,5 @@ fieldset[disabled]  .call2action {
 .call2action:hover a {
     color: white;
 }
+
+
